@@ -5,6 +5,7 @@ Revision history for plv8
             - add Bigint support
             - add BigInt64Array support
             - add direct JSONB conversion to and from v8 objects
+            - add plv8.memory_usage()
 
 2.3.9       2018-12-09
             - work around pg11 forced filename endings
